contact page - end of lab2

--- a/html/contact.html
+++ b/html/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
+    <link rel="stylesheet" href="../css/lab1.css" type="text/css">
     <link rel="stylesheet" href="../css/lab2.css" type="text/css">
 </head>
 <body>
@@ -23,7 +24,7 @@
         <div></div>
     </nav>
 
-    <img src="../images/caribbean.jpg">
+    <img src="../images/caribbean.jpg" alt="Error loading image">
 
     <h2>
         CONTACT
@@ -66,8 +67,8 @@
             <label for="address">Address</label><br>
             <input type="text" id="address"><br>
 
-            <label for="birthdate">Birthdate</label><br>
-            <input type="text" id="birthdate"><br>
+            <label for="birth_date">Birth date</label><br>
+            <input type="date" id="birth_date"><br>
 
             <label for="phone_number">Phone number</label><br>
             <input type="text" id="phone_number"><br>
@@ -75,10 +76,10 @@
             <label for="email">Email</label><br>
             <input type="text" id="email"><br>
 
-            <label for="favorite_color">Favorite color</label><br>
-            <input type="text" id="favorite_color"><br>
+            <label for="favorite_color">Favorite color</label>
+            <input type="color" id="favorite_color"><br>
 
-            <input type="submit" value="Sumbit">
+            <input type="submit" value="Submit">
             <input type="button" value="Reset">
 
         </form>
@@ -92,21 +93,21 @@
     <ul>
         <li>
             <h3><strong>Crete - 5 days</strong></h3>
-            <img src="../images/crete.jpg">
+            <img src="../images/crete.jpg" alt="Error loading image">
             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu pulvinar elit. Donec venenatis
                 placerat sapien eget.
             </div>
         </li>
         <li>
             <h3><strong>Barcelona</strong></h3>
-            <img src="../images/barcelona.jpg">
+            <img src="../images/barcelona.jpg" alt="Error loading image">
             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus, erat quis imperdiet pretium,
                 quam arcu semper.
             </div>
         </li>
         <li>
             <h3><strong>Montenegro</strong></h3>
-            <img src="../images/montenegro.jpg">
+            <img src="../images/montenegro.jpg" alt="Error loading image">
             <div>
                 Phasellus sodales massa odio. In sed augue quis nisi volutpat volutpat.
             </div>
