contact page - finished

--- a/html/contact.html
+++ b/html/contact.html
@@ -79,8 +79,10 @@
             <label for="favorite_color">Favorite color</label>
             <input type="color" id="favorite_color"><br>
 
-            <input type="submit" value="Submit">
-            <input type="button" value="Reset">
+            <div></div>
+
+            <input type="submit" value="Submit" id="submit">
+            <input type="button" value="Reset form" id="reset">
 
         </form>
 
