--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>CalaTour</title>
     <link href="../css/lab1.css" rel="stylesheet" type="text/css">
+    <script src="../js/lab3.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -14,11 +15,12 @@
     </h1>
     <nav>
         <ul>
-            <li><a><strong>Home</strong></a></li>
+            <li><a class="active" href="index.html"><strong>Home</strong></a></li>
             <li><a><strong>Cruises</strong></a></li>
             <li><a><strong>Hiking</strong></a></li>
             <li><a><strong>Swimming</strong></a></li>
             <li><a><strong>Special offers</strong></a></li>
+            <li><a href="contact.html"><strong>Contact</strong></a></li>
         </ul>
         <div></div>
     </nav>
