finished validation + reset and submit implementation

--- a/html/contact.html
+++ b/html/contact.html
@@ -65,30 +65,30 @@
             <ul id="messages"></ul>
 
             <label for="surname">Surname</label><br>
-            <input type="text" id="surname" value="test"><br>
+            <input type="text" id="surname" value="Chelaru"><br>
 
             <label for="first_name">First name</label><br>
-            <input type="text" id="first_name"><br>
+            <input type="text" id="first_name" value="Ian"><br>
 
             <label for="address">Address</label><br>
-            <input type="text" id="address"><br>
+            <input type="text" id="address" value="address1"><br>
 
             <label for="birth_date">Birth date</label><br>
-            <input type="date" id="birth_date"><br>
+            <input type="text" id="birth_date" value="01/10/2010"><br>
 
             <label for="phone_number">Phone number</label><br>
-            <input type="text" id="phone_number"><br>
+            <input type="text" id="phone_number" value="000-123456789"><br>
 
             <label for="email">Email</label><br>
-            <input type="text" id="email"><br>
+            <input type="text" id="email" value="my_email@calatour.ro"><br>
 
             <label for="favorite_color">Favorite color</label>
             <input type="color" id="favorite_color"><br>
 
             <div></div>
 
-            <input type="submit" value="Submit" id="submit">
-            <input type="button" value="Reset form" id="reset">
+            <input type="button" value="Submit" id="submit" onclick="submitForm()">
+            <input type="button" value="Reset form" id="reset" onclick="resetForm()">
 
         </form>
 
