--- a/html/contact_chat.html
+++ b/html/contact_chat.html
@@ -11,7 +11,7 @@
     <script src="../js/jquery-3.3.1.js" type="text/javascript"></script>
     <script src="../js/lab3.js" type="text/javascript"></script>
     <script src="../js/lab4.js" type="text/javascript"></script>
-<!--    <script src="../js/lab5.js" type="text/javascript"></script>-->
+    <script src="../js/lab5.js" type="text/javascript"></script>
 </head>
 <body>
 
